--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = '20'>
     <tr>
-      <td><img src="image/angela.png" alt="angela profile picture"></td>
+      <td><img src="angela.png" alt="angela profile picture"></td>
       <td><h1>Angela YU</h1>
         <p><em>Founder and CTO of <strong><a href = 'https://www.appbrewery.co/'>The App Brewery.</a></strong></em></p>
         <p>I and an iOS and Web developer and I like Coffee and brew my own beers.</p>
